      - New positional action override options '--markauto', '--unmarkauto'.
      - 'markauto', 'unmarkauto': are now first-class management commands.
      - Action preview prompt: now properly show reinstalled packages as
        reinstalled, not as upgraded.
      - Action preview prompt: removed the 'one expression per line'
        limitation while processing 'a' choice.
    - 'shell':
      - Don't rebuild the cache uselessly when a package management action
        was suggested but not confirmed by user.
    - New 'functional selectors' syntax for advanced version selection. 
    - 'search':
      - New option '--fse'.
    - 'tar-metadata':
      - Include also signatures of Release files.
  * lib:
    - Removed deprecated functions 'fatal', 'warn', 'debug', 'simulate'.
    - [API break] '__': now returns 'const char*' instead of 'string'.
    - cache:
      - [API break] Pointers to Package and Version objects are now persistent
        and unique. Thus shared pointers to those objects are no more used in
        public interfaces.
      - [API break] PinnedVersion: removed explicit constructor.
      - [API break] Removed deprecated methods and structures.
      - [API break] Constructor: removed the argument
        'packageNameGlobsToReinstall' as not needed anymore.
      - [API break] 'getLocalizedDescriptions' is replaced with
        'getLocalizedDescription'.
      - [API break] 'getPolicyVersion' is renamed to 'getPreferredVersion'.
      - New possibility to use index-of-index files to speed up building
        the package cache.
      - [API break] 'getSystemState': now returns persistent constant pointer.
    - cache/package:
      - Apply id version suffixes (^<suffix>) to version strings to
        differentiate versions with same version string but different hash
        sums.
      - New methods begin() and end().
    - cache/relation:
      - [API break] ArchitecturedRelation, ArchitecturedRelationExpression: